src/sass/components/_footer.scss
footer {
  .footer-menu {
    background-color: $footer-bg;
    padding: 3rem 0;

    .menu-wrapper {
      h6 {
        color: #ffffff;
        text-transform: uppercase;
        margin: 0 0 1rem 0;
      }

      ul {
        margin: 0 0 1.5rem 0;
        padding: 0;
        list-style: none;
        li {
          a {
            font-size: 14px;
            line-height: 30px;
            color: rgb(169,169,169);

            &:hover {
              color: #ffffff;
            }
          }
        }
      }
    }

    .payment-methods {
      margin: 0;
      padding: 0;
      list-style: none;

      li {
        display: inline-block;
      }
    }
  }

  .bottom-bar {
    background-color: $footer-claim-bg;

    .container > .row {
      height: 95px;
    }

    .copyright {
      p {
        margin: 0;
        color: rgb(169,169,169);
        font-size: 14px;
        line-height: 26px;
      }
    }

    .socialmedia {
      ul {
        margin: 0;
        padding: 0;
        list-style: none;

        li {
          display: inline-block;
          margin-left: 1rem;

          a {
            color: rgb(169,169,169);
            text-decoration: none;

            &:hover {
              color: $primary;
            }
          }
        }
      }
    }
    &__special-box {
      display: none;
    }
  }
}

@media (min-width: map-get($grid-breakpoints, lg)) and (max-width: map-get($grid-breakpoints, xl))  {
  .copyright {
    text-align: left !important;
  }

  .socialmedia {
    text-align: right !important;
  }

  footer .bottom-bar {
    &__special-box {
      display: block;
      width: 100%;
    }
    
    &__special-text {
      margin: auto;
      text-align: center;
      color: $footer-text-color;
      font-size: 14px;
      line-height: 26px;
    }
  }
}

